# backend-flight-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  models.py
app/routes/: __init__.py  data.py  health.py  ml.py
app/schemas/: __init__.py  data.py  ml.py
app/services/: __init__.py  data_service.py  ray_service.py
scripts/: import_csv_to_db.py  setup_database.py
